--- a/clase/src/main/resources/application.yaml
+++ b/clase/src/main/resources/application.yaml
@@ -2,9 +2,9 @@ server:
   port: 8080
 spring:
   application:
-    name:"dark_store"
+    name: "dark_store"
   datasource:
-    url: jbdc:mysql://localhost:3306/dark_store
+    url: jdbc:mysql://localhost:3306/dark_store
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
